# serializer version: 1
# name: test_issue_40
  list([
    tuple(
      tuple(
        0,
        1,
      ),
      'Jonat han',
    ),
    tuple(
      tuple(
        1,
        2,
      ),
      None,
    ),
    tuple(
      tuple(
        2,
        3,
      ),
      None,
    ),
    tuple(
      tuple(
        3,
        4,
      ),
      None,
    ),
    tuple(
      tuple(
        4,
        5,
      ),
      None,
    ),
    tuple(
      tuple(
        5,
        6,
      ),
      None,
    ),
    tuple(
      tuple(
        6,
        7,
      ),
      None,
    ),
    tuple(
      tuple(
        7,
        8,
      ),
      None,
    ),
    tuple(
      tuple(
        8,
        9,
      ),
      None,
    ),
    tuple(
      tuple(
        9,
        10,
      ),
      None,
    ),
    tuple(
      tuple(
        10,
        11,
      ),
      None,
    ),
    tuple(
      tuple(
        11,
        12,
      ),
      None,
    ),
    tuple(
      tuple(
        12,
        13,
      ),
      None,
    ),
    tuple(
      tuple(
        13,
        14,
      ),
      None,
    ),
    tuple(
      tuple(
        14,
        15,
      ),
      None,
    ),
    tuple(
      tuple(
        15,
        16,
      ),
      None,
    ),
    tuple(
      tuple(
        16,
        17,
      ),
      None,
    ),
    tuple(
      tuple(
        17,
        18,
      ),
      None,
    ),
    tuple(
      tuple(
        18,
        19,
      ),
      None,
    ),
  ])
# ---
# name: test_long_text
  list([
    tuple(
      tuple(
        0,
        1,
      ),
      None,
    ),
    tuple(
      tuple(
        1,
        2,
      ),
      None,
    ),
    tuple(
      tuple(
        2,
        3,
      ),
      'Riksgäldskontoret',
    ),
    tuple(
      tuple(
        3,
        4,
      ),
      None,
    ),
    tuple(
      tuple(
        4,
        5,
      ),
      None,
    ),
    tuple(
      tuple(
        5,
        6,
      ),
      None,
    ),
    tuple(
      tuple(
        6,
        7,
      ),
      None,
    ),
    tuple(
      tuple(
        7,
        8,
      ),
      None,
    ),
    tuple(
      tuple(
        8,
        9,
      ),
      None,
    ),
    tuple(
      tuple(
        9,
        10,
      ),
      None,
    ),
    tuple(
      tuple(
        10,
        11,
      ),
      None,
    ),
    tuple(
      tuple(
        11,
        12,
      ),
      None,
    ),
    tuple(
      tuple(
        12,
        13,
      ),
      None,
    ),
    tuple(
      tuple(
        13,
        14,
      ),
      None,
    ),
    tuple(
      tuple(
        14,
        15,
      ),
      None,
    ),
    tuple(
      tuple(
        15,
        16,
      ),
      None,
    ),
    tuple(
      tuple(
        16,
        17,
      ),
      None,
    ),
    tuple(
      tuple(
        17,
        18,
      ),
      None,
    ),
    tuple(
      tuple(
        18,
        19,
      ),
      None,
    ),
    tuple(
      tuple(
        19,
        20,
      ),
      None,
    ),
    tuple(
      tuple(
        20,
        21,
      ),
      None,
    ),
    tuple(
      tuple(
        21,
        22,
      ),
      None,
    ),
    tuple(
      tuple(
        22,
        23,
      ),
      None,
    ),
    tuple(
      tuple(
        23,
        24,
      ),
      None,
    ),
    tuple(
      tuple(
        24,
        25,
      ),
      None,
    ),
    tuple(
      tuple(
        25,
        26,
      ),
      None,
    ),
    tuple(
      tuple(
        26,
        27,
      ),
      'Riksdagsordningen',
    ),
    tuple(
      tuple(
        27,
        28,
      ),
      None,
    ),
    tuple(
      tuple(
        28,
        29,
      ),
      '',
    ),
  ])
# ---
# name: test_short_text
  list([
    tuple(
      tuple(
        0,
        1,
      ),
      None,
    ),
    tuple(
      tuple(
        1,
        2,
      ),
      None,
    ),
    tuple(
      tuple(
        2,
        3,
      ),
      'Handelstidningens',
    ),
    tuple(
      tuple(
        3,
        4,
      ),
      'gårdagsnummer',
    ),
    tuple(
      tuple(
        4,
        5,
      ),
      None,
    ),
    tuple(
      tuple(
        5,
        6,
      ),
      None,
    ),
    tuple(
      tuple(
        6,
        7,
      ),
      None,
    ),
    tuple(
      tuple(
        7,
        8,
      ),
      'som',
    ),
    tuple(
      tuple(
        8,
        9,
      ),
      None,
    ),
    tuple(
      tuple(
        9,
        10,
      ),
      None,
    ),
    tuple(
      tuple(
        10,
        11,
      ),
      'Frölandsviken',
    ),
    tuple(
      tuple(
        11,
        12,
      ),
      None,
    ),
  ])
# ---
